styles.css
@font-face {
  font-family: "badaboom";
  src: url("res/fonts/badaboom.ttf");
}

@font-face {
  font-family: "komika";
  src: url("res/fonts/komika.ttf");
}

html {
  height: 100%;
}

body {
  background-image: url(res/back_day.png);
  background-color: rgb(255, 179, 155);
  background-position: center center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  position: relative;
  width: 100%;
  height: 100vh;
  margin: 0;
}

#logo {
  height: 20vh;
  max-height: 125px;
  min-height: 100px;
  margin: 1vh 0px;
  margin-bottom: 3vh;
  opacity: 0;
  transition: all 0.6s ease-in-out;
  transform: scale(0.5);
}

#outerlayout {
  display: flex;
  align-items: center;
  justify-content: center;
  /* height: 100%; */
}

#layout {
  height: 100%;
  width: 400px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 10vh 0vw;
}
.latest {
  color: #eee;
  position: absolute;
  left: 75%;
  top: -10px;
  border-radius: 10px;
  background-color: black;
  padding: 3px 5px;
  font-family: "komika";
  font-size: 10px;
}

#social {
  padding: 3vh 0px;
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.sociallogo {
  width: 30px;
  height: 30px;
  opacity: 80%;
  background-size: cover;
}
#fb {
  background-image: url(res/social_logos/fb.png);
}

#ig {
  background-image: url(res/social_logos/ig.png);
}

#mail {
  background-image: url(res/social_logos/mail.png);
}

#sc {
  background-image: url(res/social_logos/sc.png);
}

.artwork {
  padding: 2px;
  width: 35px;
  height: 35px;
  border-radius: 50px;
  border: solid 1px black;
}

.title {
  font-family: "komika";
  max-width: 210px;
  text-align: center;
  font-size: 15px;
}

.subtitle {
  font-family: "komika";
  width: 180px;
  text-align: center;
  font-size: 13px;
  color: rgb(80, 63, 88);
}

.day {
  font-family: "komika"; 
  font-size: 13px;
  position: absolute;
  right: 42px;
  top: 14px
}
.month {
  font-family: "komika"; 
  font-size: 13px;
  position: absolute;
  right: 23px;
  top: 32px
}

.slash {
  font-family: "komika"; 
  font-size: 11px;
  position: absolute;
  right: 35px;
  top: 23px
}


.playicon {
  width: 36px;
  height: 36px;
}

.item {
  border-radius: 20px;
  height: 40px;
  width: 80%;
  background-color: rgba(255, 255, 255, 0.7);
  position: relative;
  height: fit-content;
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding: 5px;
  padding-left: 10px;
  padding-right: 10px;
  border: solid 2px black;
  min-height: 50px;
  margin-bottom: 10px;
  opacity: 0;
  transition: all 0.3s ease-in-out;
  transform: translate(0, 3vh);
}

/* unvisited link */
a:link {
  color: black;
  text-decoration: none;
}

/* visited link */
a:visited {
  color: black;
  text-decoration: none;
}

/* mouse over link */
a:hover {
  color: black;
  text-decoration: none;
}

/* selected link */
a:active {
  color: black;
  text-decoration: none;
}

.titlewrap {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.sub {
  border-radius: 30px;
  padding: 2vh;
  margin-top: 1vh;
  font-family: "badaboom";
  font-size: 22px;
  color: #eee;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: black;
  opacity: 0;
  transition: all 0.2s ease-in-out;
  transform: translate(0, 3vh);
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: #3a4250;
    background-image: url(res/back_night.png);
  }
  .subtitle {
    color: #3a4250;
  }
}

